--- a/axios-bonus/style.css
+++ b/axios-bonus/style.css
@@ -11,11 +11,11 @@ header {
 }
 
 .cont_header {
-  width: 60%;
+  width: 80%;
   margin: auto;
   height: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
 }
 
